fix align profile

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,6 @@ nav {
   background-color: #202a3c;
   width: 400px;
   height: 200px;
-  align-items: center;
   text-align: start;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
@@ -113,6 +112,12 @@ nav {
 }
 
 .profile {
+  margin-top: 10px;
   height: fit-content;
   display: flex;
+}
+
+.profile img {
+  border-radius: 100%;
+  margin-right: 10px;
 }
